# traffic-sim

./: README.md  ngrok_portforward.py
controller/: .clang-format  CMakeLists.txt  README.md
controller/cmake/: clang_cl_profile.cmake  create_target.cmake
controller/controller/: CMakeLists.txt  common.hpp  communication.hpp  console_io.hpp  controller.hpp  controller_generator.hpp  crossing.hpp  main.cpp  utility.hpp
controller/controller/communication/: connection.hpp  json.hpp  state.hpp
controller/controller/strategy/: crossing_strategy.hpp  strategy_timewise_urgency.hpp
controller/controller/tests/: manual_no_connection.cpp  mock_connection.hpp
controller/controller/traffic_manager/: manager.hpp
controller/controller/traffic_manager/strategy/: accumulative_priority_strategy.hpp  round_robin.hpp  strategy.hpp  test_strategy.hpp
controller/dependencies/: conanfile.txt  remotes.txt
simulation/: TrafficInfo.py  client.py  connection.py  game.py  game_objects.py  layout.py  layout_debug.py  main.py  requirements.txt  simulation.py  trafficLight.py  traffic_light.py  utils.py  vehicle.py
simulation/assets/: background.png-autosave.kra
